# openGLStudy

./: README.md
demo1/: CMakeLists.txt  opengl.cpp
demo2/: opengl.cxx
demo2/glad/src/: glad.c
demo3/: CMakeLists.txt  opengl.cxx
demo3/glad/include/glad/: glad.h
